[package]
name = "myzone-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.1"
tokio = { version = "1.32.0", features = ["rt", "time", "macros"] }
uuid = { version = "1.4.1", features = ["v4"] }
hex = "0.4.3"